@@ -39,6 +39,16 @@ namespace Astroid {
     ustring quoting_a = ustring::compose (astroid->config ().get<string> ("mail.reply.quote_line"),
         Address(msg->sender.raw()).fail_safe_name(), msg->pretty_verbose_date());
 
+    /* quote string can also be formatted using date formats:
+     * https://developer.gnome.org/glibmm/stable/classGlib_1_1DateTime.html#a820ed73fbf469a24f86f417540873339
+     *
+     * note that the format specifiers in the docs use a leading '\' this should
+     * be a leading '%'.
+     *
+     */
+    Glib::DateTime dt = Glib::DateTime::create_now_local (msg->received_time);
+    quoting_a = dt.format (quoting_a);
+
     quoted  << quoting_a.raw ()
             << endl;
 
